add Cache, refactor intefaces and quick fix UnitTests

--- a/CRUD.WebAPI/appsettings.json
+++ b/CRUD.WebAPI/appsettings.json
@@ -9,5 +9,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "CacheConfiguration": {
+    "AbsoluteExpirationInSeconds": 10,
+    "SlidingExpirationInSeconds": 5
+  },
   "AllowedHosts": "*"
 }
